# openauto

./: CMakeLists.txt
android/: AndroidManifest.xml  build.gradle
android/res/xml/: usb_device_filter.xml
android/src/com/getcrankshaft/openauto/android/: OpenAutoActivity.java
cmake_modules/: Findtaglib.cmake
gstreamer_android/: CMakeLists.txt
include/f1x/: aasdk
include/f1x/aasdk_android/: AndroidUSBHub.hpp
include/f1x/openauto/Common/: Log.hpp
include/f1x/openauto/autoapp/: App.hpp
include/f1x/openauto/autoapp/Projection/: GObjectDeleter.hpp  GstAudioOutput.hpp  IInputDevice.hpp  IVideoOutput.hpp  QuickGstVideoOutput.hpp
include/f1x/openauto/autoapp/Service/: AndroidAutoEntity.hpp  AudioInputService.hpp  AudioService.hpp  BluetoothService.hpp  InputService.hpp  MediaAudioService.hpp  SensorService.hpp  SpeechAudioService.hpp  SystemAudioService.hpp  VideoService.hpp  WifiService.hpp
include/f1x/openauto/autoapp/UI/: MainWindow.hpp
include/f1x/openauto/btservice/: AndroidBluetoothServer.hpp
src/aasdk_android/: AndroidUSBHub.cpp
src/autoapp/: App.cpp  autoapp.cpp
src/autoapp/Projection/: GstAudioOutput.cpp  QtVideoOutput.cpp  QuickGstVideoOutput.cpp  QuickGstVideoOutput.qml  RtAudioOutput.cpp  qmlfiles.qrc
src/autoapp/Service/: AndroidAutoEntity.cpp  AndroidAutoEntityFactory.cpp  MediaAudioService.cpp  SensorService.cpp  ServiceFactory.cpp  SpeechAudioService.cpp  SystemAudioService.cpp
src/autoapp/UI/: MainWindow.cpp  SettingsWindow.cpp  settingswindow.ui
src/btservice/: AndroidBluetoothServer.cpp
